# mentor-matcher

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  overrides.yaml  pyproject.toml  render.yaml  requirements.txt  supabase_schema.sql
.github/workflows/: ci.yml  keep-alive.yml
.streamlit/: config.toml  secrets.toml.example
app/: i18n.py  streamlit_app.py
data/: mentors_prod_200_enriched.csv  students_prod_2000_enriched.csv
data/cache/: mentors_enriched.json  students_enriched.json
src/matcher/: __init__.py  capacity.py  cli.py  config.py  constraints.py  data_io.py  enrich.py  matcher.py  metrics.py  rematch.py  schedule.py  scoring.py  store.py
tests/: test_capacity.py  test_constraints.py  test_data_io.py  test_enrich.py  test_matcher.py  test_schedule.py  test_scoring.py  test_store.py
