[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mentor-matcher"
version = "0.1.0"
description = "Rule-driven mentor-student matching tool for the TeenCare take-home"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "networkx>=3.1",
    "openai>=1.40",
    "streamlit>=1.34",
    "supabase>=2.4",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
